--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="input">Username:<input id="uname" type="text" ></div>
 
 <div class="input">Password:<input id="pswd" type="password" ></div></center>
-<button id="entry" >entry </button>
+<button id="entry" >submit </button>
 </div>
 <h4><table id="display" border="1">
 	<tr>
