--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="input">Lastname:<input id="lname" type="text" ></div>
 
-<div class="input">Mobilenumber:<input id="mnumber" type="number" ></div>
+<div class="input">Mobileno:<input id="mnumber" type="number" ></div>
 
 <div class="input">Gender:<input id="gender" type="text" ></div>
 
