--- a/index.html
+++ b/index.html
@@ -1,34 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
+
 <body>
 
 
-<div id="container">
-<center><div class="input">Firstname:<input id="fname" type="text" ></div>
 
-<div class="input">Lastname:<input id="lname" type="text" ></div>
 
-<div class="input">Mobilenumber:<input id="mnumber" type="number" ></div>
+    <div id="container">
+        <center>
+            <div class="input">Firstname:<input id="fname" type="text"></div>
 
-<div class="input">Gender:<input id="gender" type="text" ></div>
+            <div class="input">Lastname:<input id="lname" type="text"></div>
 
-<div class="input">Username:<input id="uname" type="text" ></div>
+            <div class="input">Mobilenumber:<input id="mnumber" type="number"></div>
 
-<div class="input">Password:<input id="pswd" type="password" ></div></center>
-<button id="entry" >submit </button>
-</div>
-<h4><table id="display" border="1">
-	<tr>
-		<center><th>SrNo</th>
-		<th>Name</th>
-		<th>Mobilenumber</th>
-		<th>Gender</th>
-		<th>Username</th></center>
-	</tr>
-</table></h4>
-<script src ="script.js"></script>
+            <div class="input">Gender:<input id="gender" type="text"></div>
+
+            <div class="input">Username:<input id="uname" type="text"></div>
+
+            <div class="input">Password:<input id="pswd" type="password"></div>
+        </center>
+        <button id="entry">submit </button>
+    </div>
+    <h4>
+        <table id="display" border="1">
+            <tr>
+                <center>
+                    <th>SrNo</th>
+                    <th>Name</th>
+                    <th>Mobilenumber</th>
+                    <th>Gender</th>
+                    <th>Username</th>
+                </center>
+            </tr>
+        </table>
+    </h4>
+    <script src="script.js"></script>
+
+
+
+
+
 
 </body>
+
 </html>
