--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <table id="display" border="1">
             <tr>
                 <center>
-                    <th>SrNo</th>
+                    <th> <a href="https://courses.cognitiveclass.ai/certificates/f2d717e56e6c4eb98d18fbb52fc29707">Python for Data Science</a> </th>
                     <th>Name</th>
                     <th>Mobilenumber</th>
                     <th>Gender</th>
@@ -44,10 +44,10 @@
             </tr>
         </table>
     </h4>
-    <script src="script.js"></script>
+    <script src=" script.js "></script>
 
 
-    <div class="input">Mobileno:<input id="mnumber" type="number"></div>
+    <div class="input ">Mobileno:<input id="mnumber " type="number "></div>
 
 
 
